[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-fzj-weather-exporter"
authors = [
    {name = "Oskar Druska"},
]
description = "A Prometheus exporter for Weather Data from the FZJ."
version = "1.3.0"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["prometheus", "exporter", "weather", "FZJ"]
license = {text = "ISC"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'BeautifulSoup4',
    'prometheus_client',
    'requests',
]

[project.urls]
"Bug Reports" ="https://github.com/psyinfra/prometheus-fzj-weather-exporter/issues/"
"Source" = "https://github.com/psyinfra/prometheus-fzj-weather-exporter/"

[project.optional-dependencies]
tests = [
    'flake8',
    'pyre-check',
    'pytest',
    'pytest-vcr',
]

[project.scripts]
prometheus_fzj_weather_exporter = "prometheus_fzj_weather_exporter.main:main"
